--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   height: 40vmin;
   pointer-events: none;
 }
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+  
+  border:1;
+
+
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
